<resources>
    <string name="app_name">Easy Food</string>
    <string name="signup">SignUp</string>
    <string name="sign_in">sign In</string>
    <string name="sign_up">sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="_0123456789">0123456789</string>
    <string name="password">Password</string>
    <string name="_8352">8352</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_nav_tese">NavTese</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="api_key">AIzaSyBgVZXhpQfMBZ8CT2gy11DUxwKKnMK4cKc</string>
</resources>